translation and GUI fixes

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -95,6 +95,26 @@
         "deleteConfirmationMessage":"Do you really want to delete this image?",
         "imageDeleteSuccessMessage":"The image has been deleted successfully"
     },
+    "workExperience":{
+        "title":"Work Experience",
+        "stepDescription":"Here, you can add your information regarding your work.",
+        "jobTitle":"Title",
+        "company":"Company",
+        "employmentType":"Employment Type",
+        "employmentTypeValue":"{{empType}}",
+        "startDate":"Start Date",
+        "endDate":"End Date",
+        "description":"Description",
+        "fullTime": "Full-Time",
+        "partTime": "Part-Time",
+        "selfEmployed": "Self-Employed",
+        "freelance": "Freelance",
+        "contract": "Contract",
+        "internship": "internship",
+        "apprenticeship": "Apprenticeship",
+        "other": "Other",
+        "present": "Present"
+    },
     "educationInfo":{
         "title":"Education Information",
         "stepDescription":"Here, you can add your information regarding your education. So: What is your educational background",
@@ -107,7 +127,7 @@
         "school":"School",
         "grade":"Grade",
         "gradutaionYear":"Graduation Year"
-    },
+    },    
     "industryAndPositionPreference":{
         "title":"Industries and Positions",
         "stepDescription":"So that we can know in which industries and positions you are intrested, please choose from the following.",
