Making the SkipStep bilinguar

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -194,5 +194,11 @@
     "sideMenu": {
         "progress": "Fortschritt",
         "description": "Wenn Du zu einem vorherigen Schritt wechseln willst, dann klicke einfach auf den entsprechenden Eintrag in der Liste!"
+    },
+
+    "skipStep":{
+        "skip": "Überspringen",
+        "skipMessage": "Möchtest du diesen Schritt wirklich überspringen? Bitte überspringe diesen Schritt nur dann, wenn die hier benötigten Informationen Teil der Dokumente sind, welche Du als Bilder hochgeladen hast.",
+        "skipStep": "Schritt überspringen"
     }
 }
