--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -98,7 +98,7 @@
     },
     "workExperience":{
         "title": "Arbeitserfahrung",
-        "stepDescription": "Hier kannst du Informationen zu deinem Arbeit angeben.",
+        "stepDescription": "Hier kannst du Informationen zu deiner Arbeit angeben.",
         "jobTitle": "Titel",
         "company": "Unternehmen",
         "employmentType": "Beschäftigungsverhältnis",
