Change 'OK' language phrase

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -10,7 +10,7 @@
         "save": "Speichern",
         "quit": "Schließen",
         "add": "Hinzufügen",
-        "okay": "In Ordnung",
+        "okay": "OK",
         "search": "Suche" 
     },
     "homePage": {
