--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -10,7 +10,7 @@
         "save": "Save",
         "quit": "Quit",
         "add": "Add",
-        "okay": "Ok",
+        "okay": "OK",
         "search": "Search"
     },
     "homePage": {
