--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -98,7 +98,7 @@
     },
     "workExperience":{
         "title": "Arbeitserfahrung",
-        "stepDescription": "Hier kannst du Informationen zu deiner Arbeit angeben.",
+        "stepDescription": "Hier kannst Du Informationen zu Deiner Arbeitserfahrung angeben.",
         "jobTitle": "Titel",
         "company": "Unternehmen",
         "employmentType": "Beschäftigungsverhältnis",
@@ -108,12 +108,12 @@
         "description": "Beschreibung",
         "fullTime": "Vollzeit",
         "partTime": "Teilzeit",
-        "selfEmployed": "Selbstständiger",
+        "selfEmployed": "Selbstständig",
         "freelance": "Freiberuflich",
-        "contract": "Contract",
-        "internship": "Vertrag",
+        "contract": "Vertrag",
+        "internship": "Praktikum",
         "apprenticeship": "Ausbildung",
-        "other": "andere",
+        "other": "Andere",
         "present": "Zurzeit"
     },
     "educationInfo": {
