Error notification for wrong credentials handled

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -228,6 +228,7 @@
         "title": "Register",
         "stepDescription": "Enter the admin credentials to authenticate the device",
         "userName": "Username",
-        "password": "Password"
+        "password": "Password",
+        "credentialsDoesnotMatch": "Username / Password does not match. Please enter a valid credentials."
     }
 }
