--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -228,6 +228,7 @@
         "title": "Anmelden",
         "stepDescription": "Geben Sie die Administratoranmeldeinformationen ein, um das Gerät zu authentifizieren",
         "userName": "Nutzername",
-        "password": "Passwort"
+        "password": "Passwort",
+        "credentialsDoesnotMatch": "Benutzername / Passwort stimmt nicht überein. Bitte geben Sie einen gültigen Berechtigungsnachweis ein."
     }
 }
